@@ -1,3 +1,8 @@
+Mon Sep  6  6:37:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSWindow.m: added enable/disable flush fix from dawn.
+	* Headers/NSWindow.h: added enable/disable flush fix from dawn.
+
 1999-09-05  Michael Hanni   <mhanni@sprintmail.com>
 
         * Source/NSMenuView.m: fix nagging bug reported by Gregory John
